@@ -70,7 +70,7 @@ public class ExerciseUnitResource {
         exerciseUnit.setLecture(lecture);
         lecture.addLectureUnit(exerciseUnit);
         Lecture updatedLecture = lectureRepository.save(lecture);
-        ExerciseUnit persistedExerciseUnit = (ExerciseUnit) updatedLecture.getLectureUnits().get(updatedLecture.getLectureUnits().size() - 1);
+        ExerciseUnit persistedExerciseUnit = (ExerciseUnit) updatedLecture.getLectureUnits().getLast();
 
         return ResponseEntity.created(new URI("/api/exercise-units/" + persistedExerciseUnit.getId())).body(persistedExerciseUnit);
     }
